Fix: Navigation button z-index issue

--- a/web/storybook/src/components/Atoms/FixedBackground/style.scss
+++ b/web/storybook/src/components/Atoms/FixedBackground/style.scss
@@ -8,7 +8,7 @@
     background-position: 0 0;
     background-size: cover;
     min-height: 300px;
-    z-index: 9;
+    z-index: 2;
     &__filter {
         width: 100%;
         height: 100%;
