--- a/web/storybook/src/components/Organisms/Navigation/styles.scss
+++ b/web/storybook/src/components/Organisms/Navigation/styles.scss
@@ -4,7 +4,7 @@
     position: relative;
     transition: all ease-in-out $elements-speed-normal;
     left: 0;
-    z-index: 2;
+    z-index: 3;
     &__logo {
         left: 25px;
         position: absolute;
